--- a/src/pages/widgets.module.css
+++ b/src/pages/widgets.module.css
@@ -111,6 +111,7 @@ html[data-theme="dark"] .widgetLinkCard:hover {
     font-size: 0.8rem !important; /* lg:text-5xl */
   }
   .gridDescription {
+    max-width: 100vw;
     font-size: 0.8rem !important; /* lg:text-5xl */
   }
 }
