--- a/src/components/CustomSidebar.module.css
+++ b/src/components/CustomSidebar.module.css
@@ -179,7 +179,7 @@
 }
 
 :global(.menu__list) {
-  margin-top: 0;
+  margin-top: 1rem;
   margin-bottom: 0.5rem;
 }
 
@@ -259,8 +259,8 @@
 .iconImage {
   object-fit: contain; /* object-contain */
   /* Responsive Icon Size */
-  height: 1.5rem; /* h-6 */
-  width: 1.5rem; /* w-6 */
+  height: 1rem; /* h-6 */
+  width: 1rem; /* w-6 */
 }
 
 :global(.menu__link--active) {
