--- a/src/pages/apiCard.module.css
+++ b/src/pages/apiCard.module.css
@@ -10,7 +10,7 @@
   margin: 30px 0;
   overflow: hidden;
   border-radius: 1rem; /* Increased border radius for more curve */
-  border: 1px solid #e0e0e0;
+  border: 1px solid var(--btn-white-pressed);
 }
 
 .apiCard {
@@ -42,7 +42,7 @@ html[data-theme="dark"] .apiCard:first-child {
 
 .apiCardTitle {
   margin-top: 0;
-  margin-bottom: 0.9rem;
+  margin-bottom: 0.7rem;
   color: var(--text-primary);
 }
 
@@ -61,7 +61,7 @@ html[data-theme="dark"] .apiCard:first-child {
   align-items: center;
   justify-content: center;
   background-color: transparent;
-  border: 1px solid var(--ifm-color-emphasis-300);
+  border: 1px solid var(--btn-white-pressed);
   color: var(--text-primary);
   padding: 8px 16px;
   border-radius: 0.5rem; /* More rounded button corners */
