--- a/src/pages/additionalResourec.module.css
+++ b/src/pages/additionalResourec.module.css
@@ -14,23 +14,22 @@
 .resourceGrid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 1rem;
+  gap: 16px;
 }
 
 .resourceCard {
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  border-radius: 8px;
+  border-radius: 12px;
   transition: all 0.2s ease;
   text-decoration: none;
   cursor: pointer;
   height: 100%;
-  border: 1px solid var(---btn-white-pressed); /* border border-[--ifm-color-emphasis-200] */
+  border: 1px solid var(--border-default); /* border border-[--ifm-color-emphasis-200] */
   background-color: var(
-    --ifm-card-background-color
+    --background-01
   );
-  box-shadow: var(--ifm-global-shadow-sm); /* shadow-sm */
 }
 
 html[data-theme="dark"] .resourceCard {
@@ -54,23 +53,17 @@ html[data-theme="dark"] .resourceCard:hover {
   align-items: center;
   justify-content: center;
   background-color: var(--background-01)!important;
-  border: 2px solid var(--ifm-color-emphasis-200); /* border border-[--ifm-color-emphasis-200] */
+  border: 1.06px solid var(--border-default); /* border border-[--ifm-color-emphasis-200] */
   width: 40px;
   height: 40px;
-  border-radius: 6px;
+  border-radius: 8px;
   margin-bottom: 1rem;
 }
 
-/* html[data-theme="dark"] .iconBox {
-  background-color: rgba(255, 255, 255, 0.1) !important;
-  background-color: var(--docs-color-text);
-  border: 2px solid var(--ifm-color-emphasis-200); 
-} */
-
 .icon {
-  width: 20px;
-  height: 20px;
-  color:var(--neutral-800)!important
+  width: 16px;
+  height: 16px;
+  color:var(--icon-secondary)!important
 }
 
 .contentContainer {
