--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -37,26 +37,22 @@
 }
 
 .breadcrumbLink {
-  color: var(--primary); /* text-[--ifm-color-primary] */
-  text-decoration: none; /* no-underline */
-}
-
-.breadcrumbLink:hover {
-  text-decoration: underline; /* hover:underline */
+  color: var(--text-highlight); /* text-[--ifm-color-primary] */
+  text-decoration: none!important; /* no-underline */
 }
 
 .breadcrumbSeparator {
   margin-left: 0.25rem; /* mx-1 */
   margin-right: 0.25rem; /* mx-1 */
   /* margin-top: 0.1rem; */
-  height: 1rem; /* h-4 */
-  width: 1rem; /* w-4 */
+  height: 12px; /* h-4 */
+  width:12px; /* w-4 */
   flex-shrink: 0; /* shrink-0 */
-  color:var(--neutral-500)
+  color:var(--icon-secondary)
 }
 
 .breadcrumbCurrent {
-  color:var(--neutral-500)
+  color:var(--text-secondary)
 }
 
 /* --- Hero Section --- */
@@ -77,8 +73,8 @@
 }
 
 .heroDescription {
-  max-width: 70vw;/* max-w-3xl */
-  color:var(--neutral-600)!important;
+  max-width: 70dvw;/* max-w-3xl */
+  color:var(--text-secondary)!important;
   margin-bottom: 3rem;
 }
 
